--- a/style.css
+++ b/style.css
@@ -1,25 +1,100 @@
-:root{
-    --primary-red: hsl(0, 100%, 74%);
---primary-green: hsl(154, 59%, 51%);
-
---accent-blue: hsl(248, 32%, 49%);
-
---neutral-dark-blue: hsl(249, 10%, 26%); 
---grayish-blue: hsl(246, 25%, 77%);
-
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+  --primary-red: hsl(0, 100%, 74%);
+  --primary-green: hsl(154, 59%, 51%);
+  --accent-blue: hsl(248, 32%, 49%);
+  --neutral-dark-blue: hsl(249, 10%, 26%);
+  --grayish-blue: hsl(246, 25%, 77%);
 }
 
-body{
-    background-image: url(./images/bg-intro-desktop.png);
-    min-height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.grid{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+body {
+  background-image: url(./images/bg-intro-desktop.png);
+  min-height: 100vh;
+  background-color: var(--primary-red);
+}
+
+.grid {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+}
+
+.first{
+    margin-block: 15em;  
+    margin-inline: 8em;
+}
+
+.title{
+    color: white;
+    font-weight: 700;
+    font-family: 'Poppins';
+    font-size: 2.5em;
+    width: 48%;
+    line-height: 1.1;
+}
+
+.description{
+    font-family: 'Poppins';
+    color: white;
+    margin-top: 1em;
+    width: 58%;
+}
+
+.grid__banner{
+    background-color: var(--accent-blue);
+    padding-inline: 9em;
+    padding-block: 1em;
+    border-radius: .5em;
+    width: max-content;
+    font-family: 'Poppins';
+    font-size: .9em;
+    color: white;
+}
+.form-container{
+    margin-block: 1em;
+    background-color: white;  
+    padding: 2em;
+    width: 90%;
+    border-radius: .5rem;
+}
+
+.form-container input{
+    display: flex;
+    padding: 1em;
+    width: 100%;
+}
+
+.form-container input:focus{
+    outline: none;
+    border: 1px solid var(--accent-blue);
+}
+
+.grid__button{
+    padding: .8em;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-top: 1em;
+    width: 100%;
+    font-family: 'Poppins';
+    color: white;
+    background-color: var(--primary-green);
+    outline: none;
+    border: none;
+}
+
+.grid__terms{
+    margin-top: 1em;
+    font-size: .8em;
+    font-family: 'Poppins';
+    font-weight: 500;
+}
+
+.form-component{
+    margin-block: 10em;
+    margin-inline: 8em;
 }
