--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
 
 .grid__banner{
     background-color: var(--accent-blue);
-    padding-inline: 9em;
+    padding-inline: 8em;
     padding-block: 1em;
     border-radius: .5em;
     width: max-content;
@@ -59,7 +59,7 @@ body {
     margin-block: 1em;
     background-color: white;  
     padding: 2em;
-    width: 90%;
+    width: 100%;
     border-radius: .5rem;
 }
 
@@ -67,14 +67,21 @@ body {
     display: flex;
     padding: 1em;
     width: 100%;
+    border: none;
+    font-weight: 500;
     font-family: 'Poppins';
 }
 
 .form-container input:focus{
     outline: none;
     border: 1px solid var(--accent-blue);
+    border-radius: .5em;
 }
 
+span{
+    font-weight: 500;
+    color: var(--grayish-blue);
+}
 .grid__button{
     padding: .8em;
     text-transform: uppercase;
@@ -104,4 +111,8 @@ body {
     .grid{
         flex-direction: column;
     }
-}   
+} 
+
+.bold{
+    color: var(--primary-red);
+}
